# cslbot-tjhsst

./: .gitignore  README.md  README.rst  ahamilto.py  creffett.py  fwilson.py  laudiacay.py  pyproject.toml  rnn.py  setup.py  srepetsk.py
cslbot-tjhsst/commands/: ahamilto.py  brain.py  creffett.py  fwilson.py  pfoley.py  sigmawp.py  srepetsk.py
cslbot_tjhsst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
