[tool.poetry]
name = "cslbot-tjhsst"
version = "0.4"
license = "GPL-2.0-or-later"
readme = "README.rst"
description = "TJHSST-Specific modifications for cslbot."
repository = "https://github.com/tjcsl/cslbot-tjhsst"
authors = ["The TJHSST Computer Systems Lab <cslbot@pefoley.com>"]
packages = [
  { include = "cslbot-tjhsst" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.18.0"
feedparser = "^6.0.11"

[tool.poetry.dev-dependencies]
poetry = "^1.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
